--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,11 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@900&display=swap');
 
 $container-color: #FFFFFF;
+$max-width-container: 620px;
 
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 ;
+  padding: 0;
   position: relative;
   background: $container-color;
 }
@@ -18,52 +19,45 @@ $container-color: #FFFFFF;
   width: 100%;
   justify-content: space-between;
   align-items: center;
-  
 
-  .header__logo{
-    display: flex;
-
-    .header__logo-text{
-      font-size: 20px;
-      font-family: "Montserrat Black", sans-serif;
-      cursor: pointer;
-    }
+  .header-logo {
+    font-size: 20px;
+    font-family: "Montserrat Black", sans-serif;
+    cursor: pointer;
   }
 }
 
-.header__menu {
+.header-menu {
   display: flex;
   justify-content: space-around;
-  .header__item-search{
-    background: url("https://i.ibb.co/gyd62NM/magnifying-glass.png");
-    background-size: cover;
+
+  .material-icons {
     margin-left: 15px;
     cursor: pointer;
     width: 24px;
     height: 24px;
+
     &:hover {
-      background: url("https://i.ibb.co/KWjG5j6/magnifying-glass1.png");
-      width: 24px;
-      height: 24px;
+      color: darkgray;
       background-size: cover;
     }
-  }
-  .header__item-cart{
-    background: url("https://i.ibb.co/F5Wp36k/shopping-cart.png");
-    background-size: cover;
-    margin-left: 15px;
-    cursor: pointer;
-    width: 24px;
-    height: 24px;
-    z-index: 1;
-    position: relative;
-    &:hover {
-      background: url("https://i.ibb.co/d5rB2TZ/shopping-cart1.png");
+
+    &.burger {
       width: 24px;
       height: 24px;
-      background-size: cover;
+      margin-left: 10px;
+      cursor: pointer;
+      display: none;
+      @media (max-width: $max-width-container) {
+        display: block;
+      }
     }
-    .item__card-count {
+
+    &.cart {
+      position: relative;
+    }
+
+    .header-menu__item-card-count {
       background: red;
       border-radius: 20px;
       color: #FFFFFF;
@@ -73,202 +67,117 @@ $container-color: #FFFFFF;
       position: absolute;
       top: -13px;
       right: -11px;
+      font-size: 16px;
       text-align: center;
       font-family: Montserrat, sans-serif;
     }
   }
-  .header__item-profile{
-    background: url("https://i.ibb.co/jJj0PPq/user.png");
-    background-size: cover;
-    margin-left: 15px;
-    cursor: pointer;
-    width: 24px;
-    height: 24px;
-    &:hover {
-      background: url("https://i.ibb.co/0jCFx1y/user1.png");
-      width: 24px;
-      height: 24px;
-      background-size: cover;
-
-    }
-  }
 }
-.header__item-burger {
-  margin-left: 10px;
-  cursor: pointer;
-  display: none;
-  img {
-    width: 24px;
-    height: 24px;
-  }
-}
-@media (max-width: 620px) {
-  .header__item-burger {
-    display: block;
-  }
-}
-
 
 .main {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  width: 100%;
   margin: 0 auto;
+  z-index: 1;
 }
 
-.main__navbar{
+.main-navbar {
   display: flex;
   flex-direction: column;
-  .main__navbar-item {
+  z-index: 1;
+  @media (max-width: $max-width-container) {
+    display: none;
+  }
+
+  .main-navbar__item {
     font-family: Montserrat, sans-serif;
     font-size: 20px;
     color: darkgray;
     cursor: pointer;
     padding: 40px 0 0 0;
-     &:hover {
-       color: black;
-     }
+
+    &:hover {
+      color: black;
+    }
   }
 }
-@media (max-width: 620px) {
-  .main__navbar {
-    display: none;
-  }
-}
-.main__center {
+
+.main-center {
   display: flex;
-  justify-content: flex-start;
   margin: 0 30px 0 5px;
   flex-direction: column;
   z-index: 2;
   min-width: 400px;
   max-width: 450px;
-.main__center-text {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin: 60px 0 0 0;
-  .main__center-text0 {
+
+  .main-center-content {
     display: flex;
-    justify-content: center;
-    font-family: Rajdhani, sans-serif;
-    color: darkgray;
-  }
-  .main__center-text1 {
-    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 60px 0 0 0;
 
-    justify-content: center;
-    font-size: 60px;
-    font-family: Rajdhani, sans-serif;
-  }
+    .main-center-content__item-text {
+      display: flex;
+      justify-content: center;
+      font-family: Rajdhani, sans-serif;
+      color: darkgray;
+      font-size: 20px;
 
-  .main__center-text2 {
-    font-size: 20px;
-    flex-grow: 1;
-    color: darkgray;
-    font-family: Rajdhani, sans-serif;
-
+      &.name {
+        font-size: 60px;
+        color: black;
+      }
+    }
   }
 }
-}
-.main__centerButtons {
+
+.main-center-buttons-container {
   display: flex;
   justify-content: space-around;
   margin: 70px 0 0 0;
-
-  .main_centerButtons-itemADD {
-    display: flex;
-    justify-content: space-between;
-    margin: 0;
-    color: black;
-    border-radius: 5px;
-    padding: 25px;
-    min-width: 125px;
-    max-height: 20px;
-    border: 1px solid black;
-    font-family: Montserrat, sans-serif;
-    cursor: pointer;
-
-    .itemADD__iconCart {
-      background-image: url("https://i.ibb.co/XWycHKn/add-to-basket123.png");
-      width: 20px;
-      height: 20px;
-      background-size: cover;
-    }
-
-    &:hover {
-      background: black;
-      color: $container-color;
-      border: 1px solid black;
-      .itemADD__iconCart {
-        background-image: url("https://i.ibb.co/RYkK0Z8/add-to-basket12.png");
-        background-size: cover;
-        width: 20px;
-        height: 20px;
-      }
-    }
-  }
 }
-  .main_centerButtons-itemWatch {
-    display: flex;
-    justify-content:space-between;
-    margin: 0;
-    color:black;
-    border-radius: 5px;
-    border: 1px solid black;
-    padding: 25px;
-    min-width: 125px;
-    font-family: Montserrat, sans-serif;
-  cursor: pointer;
-     .itemWatch__iconWatch {
-       background: url("https://i.ibb.co/ssnj5np/play-button.png");
-       background-size: cover;
-       width: 20px;
-       height: 20px;
 
-     }
-    &:hover {
-      background: black;
-      color: $container-color;
-      .itemWatch__iconWatch{
-        background: url("https://i.ibb.co/nRHZV91/play-button-white.png");
-        background-size: cover;
-        width: 20px;
-        height: 20px;
-      }
-
-    }
-  }
-
-
-
-.main_centerButtons-item  {
+.main-center-buttons-container__item {
+  display: flex;
+  justify-content: space-between;
   margin: 0;
-  color:$container-color;
+  color: black;
   border-radius: 5px;
-  background: black;
+  border: 1px solid black;
   padding: 25px;
+  min-width: 125px;
+  font-family: Montserrat, sans-serif;
+  cursor: pointer;
 
+  &:hover {
+    background: black;
+    color: $container-color;
+  }
+
+  .main-center-buttons-container__item-text {
+    margin: 3px 0 0 5px;
+  }
 }
-.main__numbersbackground {
+
+.main-number {
   opacity: 0.2;
   color: #ff9a03;
   font-size: 300px;
   z-index: 1;
   font-family: Montserrat, sans-serif;
   margin: 0 150px 0 0;
-}
-
-@media (max-width: 620px) {
-  .main__numbersbackground {
+  @media (max-width: $max-width-container) {
     display: none;
   }
 }
 
-.main__rightNavbarItems {
+
+.main-right-navbar {
   position: absolute;
   display: flex;
-  flex-direction:row;
+  flex-direction: row;
   justify-content: space-between;
   height: 650px;
   writing-mode: vertical-lr;
@@ -276,148 +185,146 @@ $container-color: #FFFFFF;
   top: 80px;
 }
 
-.main__rightNavbar {
-  ul {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-      li {
-        margin-bottom: 10px;
-        font-family: Montserrat, sans-serif;
-        font-size: 13px;
-        cursor: pointer;
-        &:hover {
-          color: darkgray;
-        }
-      }
-  }
 
+.main-right-navbar__item {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+  li {
+    margin-bottom: 10px;
+    font-family: Montserrat, sans-serif;
+    font-size: 13px;
+    cursor: pointer;
+
+    &:hover {
+      color: darkgray;
+    }
+  }
 }
-.mainDouble {
+
+
+.main-double {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 20px 0 0 0;
 }
-.mainDouble__Left {
+
+.main-double-left {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   max-width: 190px;
-  margin:50px 0 0 0;
-}
-@media (max-width: 620px) {
-  .mainDouble__Left {
+  margin: 50px 0 0 0;
+  @media (max-width: $max-width-container) {
     min-width: 400px;
     padding: 0 0 0 10px;
     z-index: 1;
   }
 }
-.mainDouble__Left-up{
+
+.main-double-left-up {
   display: flex;
   justify-content: space-between;
-
 }
-.mainDouble__left-down{
+
+.main-double-left-down {
   display: flex;
   justify-content: space-between;
   padding: 20px 0 0 0;
 }
-.mainDouble__Left-dark {
+
+.main-double-left-up__care {
   font-size: 35px;
   background: #FFFFFF;
   font-family: Montserrat, sans-serif;
   cursor: pointer;
+
   &:hover {
     background: black;
     color: #FFFFFF;
   }
 }
-.mainDouble__Left-light {
+
+.main-double-left-up__tech {
   padding: 0 0 0 5px;
   font-size: 35px;
   font-family: Montserrat, sans-serif;
   cursor: pointer;
+
   &:hover {
     background: black;
     color: #FFFFFF;
   }
 }
-.mainDouble--Left-learn{
+
+.main-double-left-down__item {
   font-size: 11px;
   font-family: "Montserrat Black", sans-serif;
+
+  &.line {
+    padding: 0 0 30px 0;
+  }
 }
-.mainDouble--Left-line{
-  font-size: 11px;
-  padding: 0 0 30px 0;
-  font-family: "Montserrat Black", sans-serif;
-}
-.mainDouble__center {
+
+.main-double-center {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
   position: relative;
-  z-index: 0.5;
-  margin: -310px 120px 0 0;
-  .img__boots {
+  z-index: 0;
+  margin: -520px 110px 0 200px;
+  @media (max-width: $max-width-container) {
+    margin: -120px 20px 0 0;
+    z-index: 0.5;
+  }
+
+  .main-double-center-container {
     margin-right: 10px;
-    .img {
-      max-width: 100%;
+    height: 100%;
+    max-height: 576px;
+    .main-double-center-container__image {
+      background: url("../img/imgBoots.jpg") no-repeat center 100%;
+
+      background-size: contain;
+      height: 100%;
+      width: 100%;
       min-width: 350px;
       max-height: 100%;
     }
   }
 }
 
-@media (max-width: 620px) {
-  .mainDouble__center {
-    margin: -120px 20px 0 0;
-    z-index: 0.5;
-  }
-}
 
-.mainDouble__center-slide {
+.main-double-center-slide {
   display: flex;
   flex-direction: row;
   padding: 0 30px 0 0;
   font-family: Montserrat, sans-serif;
   font-size: 13px;
-  margin: -45px 0 0 320px;
+  margin: -100px 0 0 500px;
   position: relative;
-  .slide__first {
+  @media (max-width:$max-width-container) {
+    margin: -30px 0 0 220px;
+  }
+
+  .main-double-center-slide__first {
     padding: 0 20px 0 0;
   }
 }
 
-@media (max-width: 620px) {
-  .mainDouble__center-slide {
-    margin: -30px 0 0 220px;
-  }
-}
-.footer__left {
+.footer-left {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-.footer__left_text {
+
+.footer-left__text {
   font-family: Montserrat, sans-serif;
   font-size: 10px;
   margin: 50px 0 0 0;
-}
-
-.footer__right_navbar {
-  transform: rotate(-90deg);
-  display: flex;
-  flex-direction: row;
-  position: relative;
-  justify-content: space-around;
-}
-
-.footer__right-item {
-  padding: 0 10px 0 0;
-  font-family: Montserrat, sans-serif;
-  font-size: 13px;
 }
