--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -111,14 +111,8 @@ $max-width-container: 620px;
   z-index: 2;
   min-width: 400px;
   max-width: 450px;
-
-  .main-center-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin: 60px 0 0 0;
-
-    .main-center-content__item-text {
+  justify-content: space-between;
+    .main-center__item-text {
       display: flex;
       justify-content: center;
       font-family: Rajdhani, sans-serif;
@@ -131,7 +125,7 @@ $max-width-container: 620px;
       }
     }
   }
-}
+
 
 .main-center-buttons-container {
   display: flex;
@@ -287,19 +281,17 @@ $max-width-container: 620px;
     margin-right: 10px;
     height: 100%;
     max-height: 576px;
+    min-width: 350px;
     .main-double-center-container__image {
       background: url("../img/imgBoots.jpg") no-repeat center 100%;
-
       background-size: contain;
       height: 100%;
       width: 100%;
-      min-width: 350px;
+
       max-height: 100%;
     }
   }
 }
-
-
 .main-double-center-slide {
   display: flex;
   flex-direction: row;
