--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@900&display=swap');
 
 $container-color: #FFFFFF;
-$max-width-container: 620px;
+$max-width-container: 600px;
 
 .container {
   max-width: 1200px;
@@ -111,20 +111,35 @@ $max-width-container: 620px;
   z-index: 2;
   min-width: 400px;
   max-width: 450px;
+  @media (max-width: $max-width-container) {
+    min-width: 125px;
+  }
   justify-content: space-between;
-    .main-center__item-text {
-      display: flex;
-      justify-content: center;
-      font-family: Rajdhani, sans-serif;
-      color: darkgray;
-      font-size: 20px;
 
-      &.name {
-        font-size: 60px;
-        color: black;
+  .main-center__item-text {
+    display: flex;
+    justify-content: center;
+    font-family: Rajdhani, sans-serif;
+    color: darkgray;
+    font-size: 20px;
+
+    &.name {
+      font-size: 60px;
+      color: black;
+      @media (max-width: $max-width-container) {
+        font-size: 40px;
+      }
+    }
+
+    &.paragraph {
+      text-align: center;
+      @media (max-width: $max-width-container) {
+        font-size: 15px;
       }
     }
   }
+
+}
 
 
 .main-center-buttons-container {
@@ -144,14 +159,25 @@ $max-width-container: 620px;
   min-width: 125px;
   font-family: Montserrat, sans-serif;
   cursor: pointer;
+  @media (max-width: $max-width-container) {
+    padding: 12px;
+  }
 
   &:hover {
     background: black;
     color: $container-color;
   }
 
+  @media (max-width: $max-width-container) {
+    margin: -50px 0 0 10px;
+    min-width: 110px;
+  }
+
   .main-center-buttons-container__item-text {
     margin: 3px 0 0 5px;
+    @media (max-width: $max-width-container) {
+      font-size: 12px;
+    }
   }
 }
 
@@ -177,6 +203,9 @@ $max-width-container: 620px;
   writing-mode: vertical-lr;
   right: 0;
   top: 80px;
+  @media (max-width: $max-width-container) {
+    height: 560px;
+  }
 }
 
 
@@ -192,6 +221,9 @@ $max-width-container: 620px;
     font-family: Montserrat, sans-serif;
     font-size: 13px;
     cursor: pointer;
+    @media (max-width: $max-width-container) {
+      font-size: 10px;
+    }
 
     &:hover {
       color: darkgray;
@@ -214,8 +246,9 @@ $max-width-container: 620px;
   max-width: 190px;
   margin: 50px 0 0 0;
   @media (max-width: $max-width-container) {
-    min-width: 400px;
-    padding: 0 0 0 10px;
+    min-width: 310px;
+    padding: 0 0 0 20px;
+    margin: 5px 0 0 0;
     z-index: 1;
   }
 }
@@ -236,6 +269,9 @@ $max-width-container: 620px;
   background: #FFFFFF;
   font-family: Montserrat, sans-serif;
   cursor: pointer;
+  @media (max-width: $max-width-container) {
+    font-size: 20px;
+  }
 
   &:hover {
     background: black;
@@ -248,8 +284,12 @@ $max-width-container: 620px;
   font-size: 35px;
   font-family: Montserrat, sans-serif;
   cursor: pointer;
+  @media (max-width: $max-width-container) {
+    font-size: 20px;
+  }
 
   &:hover {
+    transition: .8s ease-in background-color;
     background: black;
     color: #FFFFFF;
   }
@@ -264,48 +304,44 @@ $max-width-container: 620px;
   }
 }
 
-.main-double-center {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
-  z-index: 0;
-  margin: -520px 110px 0 200px;
-  @media (max-width: $max-width-container) {
-    margin: -120px 20px 0 0;
-    z-index: 0.5;
-  }
-
-  .main-double-center-container {
-    margin-right: 10px;
-    height: 100%;
-    max-height: 576px;
-    min-width: 350px;
-    .main-double-center-container__image {
-      background: url("../img/imgBoots.jpg") no-repeat center 100%;
-      background-size: contain;
-      height: 100%;
-      width: 100%;
-
-      max-height: 100%;
-    }
-  }
+//.main-double-center {
+//  display: flex;
+//  overflow: hidden;
+//  flex-wrap: wrap;
+//  flex-direction: column;
+//  justify-content: center;
+//  position: relative;
+//  z-index: 0;
+//
+//  .main-double-center__wrapper {
+//    display: flex;
+//    overflow: hidden;
+//    height: 100%;
+//    max-height: 576px;
+//    .main-double-center__slide {
+//      height: 100%;
+//      width: 100%;
+//      min-width: 437px;
+//      min-height: 350px;
+//
+//      img {
+//        margin: 0 0 0 30px;
+//        max-height: 700px;
+//        max-width: 700px;
+//      }
+//
+//    }
+//  }
+//}
+.swiper-pagination {
+  width: 20px;
+  height: 20px;
+  background: #ff9a03;
 }
-.main-double-center-slide {
-  display: flex;
-  flex-direction: row;
-  padding: 0 30px 0 0;
-  font-family: Montserrat, sans-serif;
-  font-size: 13px;
-  margin: -100px 0 0 500px;
-  position: relative;
-  @media (max-width:$max-width-container) {
-    margin: -30px 0 0 220px;
-  }
-
-  .main-double-center-slide__first {
-    padding: 0 20px 0 0;
+.main-double-center__image {
+  text-align: center;
+  img {
+    max-width: 100%;
   }
 }
 
@@ -319,4 +355,5 @@ $max-width-container: 620px;
   font-family: Montserrat, sans-serif;
   font-size: 10px;
   margin: 50px 0 0 0;
+
 }
