--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@900&display=swap');
+@import "ham";
+
+
+
+
+
 
 $container-color: #FFFFFF;
-$max-width-container: 600px;
+$max-width-container: 620px;
 
 .container {
   max-width: 1200px;
