--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,11 +11,15 @@
 $container-color: #FFFFFF;
 $max-width-container: 620px;
 
+body {
+  position: relative;
+  margin: 0 auto;
+}
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0;
   position: relative;
+  padding: 0;
   background: $container-color;
 }
 
@@ -37,6 +41,13 @@ $max-width-container: 620px;
   display: flex;
   justify-content: space-around;
 
+  &.hamburger{
+    display: none;
+    @media (max-width: $max-width-container) {
+      display: block;
+    }
+  }
+
   .material-icons {
     margin-left: 15px;
     cursor: pointer;
@@ -48,16 +59,7 @@ $max-width-container: 620px;
       background-size: cover;
     }
 
-    &.burger {
-      width: 24px;
-      height: 24px;
-      margin-left: 10px;
-      cursor: pointer;
-      display: none;
-      @media (max-width: $max-width-container) {
-        display: block;
-      }
-    }
+
 
     &.cart {
       position: relative;
@@ -92,9 +94,24 @@ $max-width-container: 620px;
 .main-navbar {
   display: flex;
   flex-direction: column;
-  z-index: 1;
+  z-index: 3;
   @media (max-width: $max-width-container) {
-    display: none;
+    display: block;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    text-align: center;
+    margin: -15px 0 0 0 ;
+    color: #FFFFFF;
+    z-index: 5;
+    transform: translateX(-100%);
+    background-color: #FFFFFF;
+
+    &.main-active{
+      transition: 0.5s;
+      transform: translateX(0%);
+    }
+
   }
 
   .main-navbar__item {
@@ -103,10 +120,14 @@ $max-width-container: 620px;
     color: darkgray;
     cursor: pointer;
     padding: 40px 0 0 0;
-
+    z-index: 5;
+    @media (max-width: $max-width-container) {
+      padding: 13px;
+    }
     &:hover {
       color: black;
     }
+
   }
 }
 
@@ -254,7 +275,7 @@ $max-width-container: 620px;
   z-index: 3;
   @media (max-width: $max-width-container) {
     min-width: 310px;
-    margin: 5px 0 0 20px;
+    margin: 5px 0 0 28px;
 
   }
 }
