--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -395,17 +395,15 @@ body {
     height: 100%;
   }
 }
-.products__name_title {
-  text-decoration: none;
-  color: black;
-  font-family: Montserrat, sans-serif;
-  line-height: 30px;
-}
+
 .products__name {
   text-decoration: none;
   color: black;
   font-family: "Montserrat Black", sans-serif;
   line-height: 30px;
+  &.title {
+    font-family: Montserrat, sans-serif;
+  }
 }
 
 .products__button {
@@ -421,11 +419,11 @@ body {
   border: 2px solid darkgray;
   padding: 0 20px;
   transition: .5s;
+  cursor: pointer;
   &:hover{
     background-color: black;
     color: #FFFFFF;
     border: 2px solid black;
-    //box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     box-shadow: 0 0 0 2px white, 0 0 0 4px #3A2F28;
   }
 }
