--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@900&display=swap');
 @import "ham";
+@import "~simplebar";
 
 
 $container-color: #FFFFFF;
@@ -54,7 +55,7 @@ body {
     }
   }
 
-  .material-icons {
+  .item {
     margin-left: 15px;
     cursor: pointer;
     width: 24px;
@@ -65,27 +66,139 @@ body {
       background-size: cover;
     }
 
-
-    &.cart {
+    &.cart-q {
       position: relative;
     }
+
 
     .header-menu__item-card-count {
       background: red;
       border-radius: 20px;
       color: #FFFFFF;
-      width: 20px;
-      height: 20px;
+      width: 12px;
+      height: 12px;
       z-index: 0.5;
       position: absolute;
-      top: -13px;
-      right: -11px;
-      font-size: 16px;
+      top: -10px;
+      right: -5px;
+      font-size: 9px;
       text-align: center;
       font-family: Montserrat, sans-serif;
     }
   }
 }
+.cart {
+  position: relative;
+}
+.delete{
+  color: darkgray;
+  cursor: pointer;
+  &:hover {
+    color: black;
+  }
+}
+.product__price {
+  font-family: Montserrat, sans-serif;
+  margin-bottom: 15px;
+}
+.cart-content {
+  position: absolute;
+  right: 0;
+  width: 340px;
+  z-index: 100;
+  border-radius: 15px;
+  background-color: #FFFFFF;
+  box-shadow: 0 4px 4px rgba(135,135,135,0.25);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s, visibility 0.3s;
+}
+.cart:hover .cart-content {
+  &.active {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 0.3s, visibility 0.3s;
+  }
+}
+
+.cart-content__list {
+  max-height: 330px;
+}
+.cart-product {
+  display: flex;
+  align-items: center;
+}
+.cart-content__product {
+  text-decoration: none;
+  .cart-product__img {
+    max-width: 100px;
+    max-height: 100px;
+    object-fit: cover;
+    margin-right: 20px;
+  }
+}
+.cart-content__item {
+  list-style-type: none;
+  border: 2px solid darkgray;
+  border-radius: 10px;
+  padding: 20px 10px;
+  margin-bottom: 10px;
+  margin-right: 30px;
+  &:hover {
+    border: 2px solid black;
+  }
+}
+.cart-product__delete{
+  width: 20px;
+  height: 20px;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin-left: auto;
+}
+
+.cart-product__title {
+  font-weight: 400;
+  margin-bottom: 0px;
+  font-size: 14px;
+  line-height: 20px;
+  font-family: Montserrat, sans-serif;
+  color: darkgray;
+}
+.cart-product__price {
+  font-family: "Montserrat Black", sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  color: darkgray;
+}
+
+.cart-content__bottom{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 24px 20px;
+}
+
+.cart-content__fullprice {
+  display: flex;
+  flex-direction: column;
+  font-weight: 400;
+  font-family: Montserrat, sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+}
+.fullprice {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  font-family: "Montserrat", sans-serif;
+}
+.cart-content__btn {
+  width: 146px;
+  text-align: center;
+}
+
 
 .main {
   display: flex;
@@ -344,7 +457,7 @@ body {
   max-width: 750px;
   max-height: 750px;
   position: relative;
-  margin: -345px 0px 0 50px;
+  margin: -100px 0px 0 50px;
   z-index: 1;
   @media (max-width: $max-width-container) {
     margin: -140px 0 0 0;
@@ -389,7 +502,7 @@ body {
 .products_image {
   max-width: 450px;
   max-height: 450px;
-  margin: 0 5px 0 0;
+  margin: 15px 5px 20px 0;
   img {
     width: 100%;
     height: 100%;
