--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -87,34 +87,41 @@ body {
     }
   }
 }
+
 .cart {
   position: relative;
 }
-.delete{
+
+.delete {
   color: darkgray;
   cursor: pointer;
+  right: 0;
+
   &:hover {
     color: black;
   }
 }
+
 .product__price {
   font-family: Montserrat, sans-serif;
   margin-bottom: 15px;
 }
+
 .cart-content {
   position: absolute;
   right: 0;
-  width: 340px;
+  width: 490px;
   z-index: 100;
   border-radius: 15px;
   background-color: #FFFFFF;
-  box-shadow: 0 4px 4px rgba(135,135,135,0.25);
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.3s, visibility 0.3s;
+  box-shadow: 0 4px 4px rgba(135, 135, 135, 0.25);
+  display: none;
+
 }
+
 .cart:hover .cart-content {
   &.active {
+    display: block;
     opacity: 1;
     visibility: visible;
     transition: opacity 0.3s, visibility 0.3s;
@@ -125,12 +132,23 @@ body {
   max-height: 330px;
   overflow: auto;
 }
+
+.cart-product__input {
+  width: 40px;
+  border: none;
+  font-family: Montserrat, sans-serif;
+}
+
 .cart-product {
   display: flex;
   align-items: center;
 }
+
 .cart-content__product {
+  display: flex;
+  justify-content: space-between;
   text-decoration: none;
+
   .cart-product__img {
     max-width: 100px;
     max-height: 100px;
@@ -138,6 +156,7 @@ body {
     margin-right: 20px;
   }
 }
+
 .cart-content__item {
   list-style-type: none;
   border: 2px solid darkgray;
@@ -145,11 +164,13 @@ body {
   padding: 20px 10px;
   margin-bottom: 10px;
   margin-right: 30px;
+
   &:hover {
     border: 2px solid black;
   }
 }
-.cart-product__delete{
+
+.cart-product__delete {
   width: 20px;
   height: 20px;
   border: none;
@@ -160,12 +181,13 @@ body {
 
 .cart-product__title {
   font-weight: 400;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   font-size: 14px;
   line-height: 20px;
   font-family: Montserrat, sans-serif;
   color: darkgray;
 }
+
 .cart-product__price {
   font-family: "Montserrat Black", sans-serif;
   font-weight: 700;
@@ -174,7 +196,7 @@ body {
   color: darkgray;
 }
 
-.cart-content__bottom{
+.cart-content__bottom {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -189,12 +211,14 @@ body {
   font-size: 14px;
   line-height: 20px;
 }
+
 .fullprice {
   font-weight: 700;
   font-size: 20px;
   line-height: 23px;
   font-family: "Montserrat", sans-serif;
 }
+
 .cart-content__btn {
   width: 146px;
   text-align: center;
@@ -213,7 +237,7 @@ body {
 .main-navbar {
   display: flex;
   flex-direction: column;
-  z-index: 3;
+  z-index: 4000;
   @media (max-width: $max-width-container) {
     display: block;
     width: 100%;
@@ -456,12 +480,14 @@ body {
 
 .main-double-center {
   max-width: 750px;
-  max-height: 750px;
+  max-height: 900px;
+  min-height: 450px;
   position: relative;
-  margin: -100px 0px 0 50px;
-  z-index: 1;
+  margin: -120px 0px 0 50px;
+  z-index: 0;
   @media (max-width: $max-width-container) {
-    margin: -140px 0 0 0;
+    min-height: 220px;
+    margin: -30px 0 0 0;
   }
 }
 
@@ -477,33 +503,40 @@ body {
 .swiper-pagination {
   color: black;
   font-family: "Montserrat Black", sans-serif;
-  margin: 0 0 110px 0;
+  margin: 0 0 30px 30px;
+  z-index: 1;
   @media (max-width: $max-width-container) {
-    margin: 0 0 50px 0;
+    margin: 0 0 0px 0;
+    z-index: 1;
   }
 }
 
 .section__products {
   margin: 30px 0 0 0;
 }
+
 .products__title {
   font-family: "Montserrat Black", sans-serif;
   letter-spacing: 4px;
 }
+
 .products__items {
   display: grid;
   gap: 30px;
-  grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
+
 .product__item {
   display: grid;
   grid-auto-flow: row;
   grid-template: auto 1fr minmax(50px, auto)/ 1fr;
 }
+
 .products_image {
   max-width: 450px;
   max-height: 450px;
   margin: 15px 5px 20px 0;
+
   img {
     width: 100%;
     height: 100%;
@@ -515,9 +548,16 @@ body {
   color: black;
   font-family: "Montserrat Black", sans-serif;
   line-height: 30px;
+
   &.title {
     font-family: Montserrat, sans-serif;
   }
+}
+
+.products__name_title {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-family: Montserrat, sans-serif;
 }
 
 .products__button {
@@ -534,7 +574,8 @@ body {
   padding: 0 20px;
   transition: .5s;
   cursor: pointer;
-  &:hover{
+
+  &:hover {
     background-color: black;
     color: #FFFFFF;
     border: 2px solid black;
@@ -545,6 +586,7 @@ body {
 .footer {
   margin: 20px 0 0 0;
 }
+
 .footer-left {
   display: flex;
   flex-direction: row;
